<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".ChampionsActivity">
    <ImageButton
        android:id="@+id/imgBlitz"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/imgDarius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blitzcrank" />

    <ImageButton
        android:id="@+id/imgDarius"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/imgEz"
        app:layout_constraintStart_toEndOf="@+id/imgBlitz"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/darius" />

    <ImageButton
        android:id="@+id/imgEz"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgDarius"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ezreal" />

    <ImageButton
        android:id="@+id/imgJhin"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/jhin" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
        app:layout_constraintStart_toEndOf="@+id/imgJhin"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/masteryi" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/sona" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/imageButton8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/vayne" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/viktor" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/xerath" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_blitzcrank"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBlitz" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_darius"
        android:textSize="20sp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imgDarius" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_ezreal"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imgEz"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_jhin"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgJhin" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_masteryi"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_sona"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_vayne"
        android:textSize="20sp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_viktor"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_xerath"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_exit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
